Update env.yml, add preprocessing function, add simple forcasting

--- a/model/env.yml
+++ b/model/env.yml
@@ -2,6 +2,9 @@
 # $ conda create --name <env> --file <this file>
 # platform: win-64
 arviz=0.11.4=pyhd8ed1ab_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=py_2
+backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
 bzip2=1.0.8=h8ffe710_4
 ca-certificates=2021.10.8=h5b45459_0
 certifi=2021.10.8=py38haa244fe_1
@@ -11,6 +14,9 @@ convertdate=2.3.2=pyhd8ed1ab_0
 curl=7.79.1=h789b8ee_1
 cycler=0.11.0=pyhd8ed1ab_0
 cython=0.29.24=py38h885f38d_1
+debugpy=1.5.1=py38h885f38d_0
+decorator=5.1.0=pyhd8ed1ab_0
+entrypoints=0.3=pyhd8ed1ab_1003
 ephem=3.7.7.1=py38he774522_0
 fbprophet=0.7.1=py38h7ae7562_0
 freetype=2.10.4=h546665d_1
@@ -19,8 +25,15 @@ hdf5=1.12.1=nompi_h2a0e4a3_100
 hijri-converter=2.2.2=pyhd8ed1ab_0
 holidays=0.11.3.1=pyhd8ed1ab_0
 intel-openmp=2021.4.0=h57928b3_3556
+ipykernel=6.4.2=py38h595d716_0
+ipython=7.29.0=py38h595d716_1
+ipython_genutils=0.2.0=py_1
 jbig=2.1=h8d14728_2003
+jedi=0.18.0=py38haa244fe_3
+joblib=1.1.0=pypi_0
 jpeg=9d=h8ffe710_0
+jupyter_client=7.0.6=pyhd8ed1ab_0
+jupyter_core=4.9.1=py38haa244fe_0
 kiwisolver=1.3.2=py38hbd9d945_1
 korean_lunar_calendar=0.2.1=pyh9f0ad1d_0
 krb5=1.19.2=h20d022d_3
@@ -34,9 +47,11 @@ liblapack=3.9.0=12_win64_mkl
 libnetcdf=4.8.1=nompi_h1cc8e9d_101
 libpng=1.6.37=h1d00b33_2
 libpython=2.1=py38haa244fe_1
+libsodium=1.0.18=h8d14728_1
 libssh2=1.10.0=h680486a_2
 libtiff=4.3.0=h0c97f57_1
 libzip=1.8.0=hfed4ece_1
+llvmlite=0.37.0=pypi_0
 lunarcalendar=0.0.9=py_0
 lz4-c=1.9.3=h8ffe710_1
 m2w64-binutils=2.25.1=5
@@ -66,18 +81,26 @@ m2w64-windows-default-manifest=6.4=3
 m2w64-winpthreads-git=5.0.0.4634.697f757=2
 m2w64-zlib=1.2.8=10
 matplotlib-base=3.4.3=py38h1f000d6_1
+matplotlib-inline=0.1.3=pyhd8ed1ab_0
 mkl=2021.4.0=h0e2418a_729
 msys2-conda-epoch=20160418=1
+nest-asyncio=1.5.1=pyhd8ed1ab_0
 netcdf4=1.5.8=nompi_py38h0500770_100
+numba=0.54.1=pypi_0
 numpy=1.21.3=py38h089cfbf_1
 olefile=0.46=pyh9f0ad1d_1
 openjpeg=2.4.0=hb211442_1
 openssl=1.1.1l=h8ffe710_0
 packaging=21.2=pyhd8ed1ab_1
 pandas=1.3.4=py38h5d928e2_0
+parso=0.8.2=pyhd8ed1ab_0
+patsy=0.5.2=pypi_0
+pickleshare=0.7.5=py_1003
 pillow=8.3.2=py38h794f750_0
 pip=20.2.4=py38_0
+prompt-toolkit=3.0.22=pyha770c72_0
 prophet=1.0.1=py38h43734a8_3
+pygments=2.10.0=pyhd8ed1ab_0
 pymeeus=0.5.10=pyhd8ed1ab_0
 pyparsing=2.4.7=pyhd8ed1ab_1
 pystan=2.19.1.1=py38h02adce6_3
@@ -85,20 +108,30 @@ python=3.8.5=h5fd99cc_1
 python-dateutil=2.8.2=pyhd8ed1ab_0
 python_abi=3.8=2_cp38
 pytz=2021.3=pyhd8ed1ab_0
+pywin32=301=py38h294d835_0
+pyzmq=22.3.0=py38h09162b1_1
+scikit-learn=1.0.1=pypi_0
 scipy=1.7.1=py38ha1292f7_0
 setuptools=50.3.0=py38h9490d1a_1
 six=1.16.0=pyh6c4a22f_0
+sklearn=0.0=pypi_0
+sktime=0.8.1=pypi_0
 sqlite=3.33.0=h2a8f88b_0
+statsmodels=0.12.1=pypi_0
 tbb=2021.4.0=h2d74725_1
+threadpoolctl=3.0.0=pypi_0
 tk=8.6.11=h8ffe710_1
 tornado=6.1=py38h294d835_2
 tqdm=4.62.3=pyhd8ed1ab_0
+traitlets=5.1.1=pyhd8ed1ab_0
 typing_extensions=3.10.0.2=pyha770c72_0
 vc=14.1=h0510ff6_4
 vs2015_runtime=14.16.27012=hf0eaf9b_3
+wcwidth=0.2.5=pyh9f0ad1d_2
 wheel=0.35.1=py_0
 wincertstore=0.2=py38_0
 xarray=0.19.0=pyhd8ed1ab_1
 xz=5.2.5=h62dcd97_1
+zeromq=4.3.4=h0e60522_1
 zlib=1.2.11=vc14h1cdd9ab_1
 zstd=1.5.0=h6255e5f_0
