--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,205 @@
-Flask==2.0.2
-Flask_WTF==0.15.1
-numpy==1.21.4
-pandas==1.3.4
-scikit_learn==1.0.1
-WTForms==2.3.3
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+argon2-cffi=20.1.0=py39h2bbff1b_1
+arviz=0.11.4=pyhd8ed1ab_0
+async_generator=1.10=pyhd3eb1b0_0
+attrs=21.2.0=pyhd3eb1b0_0
+autopep8=1.5.7=pyhd3eb1b0_0
+backcall=0.2.0=pyhd3eb1b0_0
+bleach=4.0.0=pyhd3eb1b0_0
+bokeh=2.4.2=pypi_0
+brotli=1.0.9=h8ffe710_6
+brotli-bin=1.0.9=h8ffe710_6
+bzip2=1.0.8=h8ffe710_4
+ca-certificates=2021.10.26=haa95532_2
+certifi=2021.10.8=py39haa95532_0
+cffi=1.15.0=py39h2bbff1b_0
+cftime=1.5.1.1=py39h5d4886f_1
+charset-normalizer=2.0.8=pypi_0
+click=8.0.3=pyhd3eb1b0_0
+cmdstanpy=0.9.5=pypi_0
+colorama=0.4.4=pyhd3eb1b0_0
+convertdate=2.3.2=pyhd8ed1ab_0
+cryptography=35.0.0=py39h71e12ea_0
+curl=7.80.0=h789b8ee_0
+cycler=0.11.0=pyhd8ed1ab_0
+cython=0.29.24=py39h415ef7b_1
+dataclasses=0.6=pypi_0
+debugpy=1.5.1=py39hd77b12b_0
+decorator=5.1.0=pyhd3eb1b0_0
+defusedxml=0.7.1=pyhd3eb1b0_0
+dnspython=2.1.0=pyhd8ed1ab_0
+docopt=0.6.2=pypi_0
+email-validator=1.1.3=pyhd3eb1b0_0
+entrypoints=0.3=py39haa95532_0
+ephem=4.1.1=pypi_0
+flask=2.0.2=pyhd3eb1b0_0
+flask-wtf=0.15.1=pyhd3eb1b0_0
+fonttools=4.28.2=py39hb82d6ee_0
+freetype=2.10.4=h546665d_1
+gunicorn=20.1.0=pypi_0
+hdf4=4.2.15=h0e5069d_3
+hdf5=1.12.1=nompi_h2a0e4a3_102
+hijri-converter=2.2.2=pyhd8ed1ab_0
+holidays=0.11.3.1=pyhd8ed1ab_0
+icu=68.2=h0e60522_0
+idna=3.2=pyhd3eb1b0_0
+importlib-metadata=4.8.1=py39haa95532_0
+importlib_metadata=4.8.1=hd3eb1b0_0
+install=1.3.4=pypi_0
+intel-openmp=2021.4.0=h57928b3_3556
+ipykernel=6.4.1=py39haa95532_1
+ipython=7.29.0=py39hd4e2768_0
+ipython_genutils=0.2.0=pyhd3eb1b0_1
+ipywidgets=7.6.5=pypi_0
+itsdangerous=2.0.1=pyhd3eb1b0_0
+jbig=2.1=h8d14728_2003
+jedi=0.18.0=py39haa95532_1
+jinja2=3.0.2=pyhd3eb1b0_0
+jpeg=9d=h8ffe710_0
+jsonschema=3.2.0=pyhd3eb1b0_2
+jupyter_client=7.0.6=pyhd3eb1b0_0
+jupyter_core=4.9.1=py39haa95532_0
+jupyterlab-widgets=1.0.2=pypi_0
+jupyterlab_pygments=0.1.2=py_0
+kiwisolver=1.3.2=py39h2e07f2f_1
+korean_lunar_calendar=0.2.1=pyh9f0ad1d_0
+krb5=1.19.2=h20d022d_3
+lcms2=2.12=h2a16943_0
+lerc=3.0=h0e60522_0
+libblas=3.9.0=12_win64_mkl
+libbrotlicommon=1.0.9=h8ffe710_6
+libbrotlidec=1.0.9=h8ffe710_6
+libbrotlienc=1.0.9=h8ffe710_6
+libcblas=3.9.0=12_win64_mkl
+libclang=11.1.0=default_h5c34c98_1
+libcurl=7.80.0=h789b8ee_0
+libdeflate=1.8=h8ffe710_0
+liblapack=3.9.0=12_win64_mkl
+libnetcdf=4.8.1=nompi_h1cc8e9d_101
+libpng=1.6.37=h1d00b33_2
+libpython=2.1=py39haa95532_0
+libssh2=1.10.0=h680486a_2
+libtiff=4.3.0=hd413186_2
+libzip=1.8.0=hfed4ece_1
+libzlib=1.2.11=h8ffe710_1013
+livelossplot=0.5.4=pypi_0
+lunarcalendar=0.0.9=py_0
+lz4-c=1.9.3=h8ffe710_1
+m2w64-binutils=2.25.1=5
+m2w64-bzip2=1.0.6=6
+m2w64-crt-git=5.0.0.4636.2595836=2
+m2w64-gcc=5.3.0=6
+m2w64-gcc-ada=5.3.0=6
+m2w64-gcc-fortran=5.3.0=6
+m2w64-gcc-libgfortran=5.3.0=6
+m2w64-gcc-libs=5.3.0=7
+m2w64-gcc-libs-core=5.3.0=7
+m2w64-gcc-objc=5.3.0=6
+m2w64-gmp=6.1.0=2
+m2w64-headers-git=5.0.0.4636.c0ad18a=2
+m2w64-isl=0.16.1=2
+m2w64-libiconv=1.14=6
+m2w64-libmangle-git=5.0.0.4509.2e5a9a2=2
+m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+m2w64-make=4.1.2351.a80a8b8=2
+m2w64-mpc=1.0.3=3
+m2w64-mpfr=3.1.4=4
+m2w64-pkg-config=0.29.1=2
+m2w64-toolchain=5.3.0=7
+m2w64-toolchain_win-64=2.4.0=0
+m2w64-tools-git=5.0.0.4592.90b8472=2
+m2w64-windows-default-manifest=6.4=3
+m2w64-winpthreads-git=5.0.0.4634.697f757=2
+m2w64-zlib=1.2.8=10
+markupsafe=2.0.1=py39h2bbff1b_0
+matplotlib=3.5.0=py39hcbf5309_0
+matplotlib-base=3.5.0=py39h581301d_0
+matplotlib-inline=0.1.2=pyhd3eb1b0_2
+mistune=0.8.4=py39h2bbff1b_1000
+mkl=2021.4.0=h0e2418a_729
+msys2-conda-epoch=20160418=1
+munkres=1.1.4=pyh9f0ad1d_0
+nbclient=0.5.3=pyhd3eb1b0_0
+nbconvert=6.1.0=py39haa95532_0
+nbformat=5.1.3=pyhd3eb1b0_0
+nest-asyncio=1.5.1=pyhd3eb1b0_0
+netcdf4=1.5.8=nompi_py39hf113b1f_101
+neuralprophet=0.3.0=pypi_0
+notebook=6.4.6=py39haa95532_0
+numpy=1.20.3=pypi_0
+olefile=0.46=pyh9f0ad1d_1
+openjpeg=2.4.0=hb211442_1
+openssl=1.1.1l=h2bbff1b_0
+packaging=21.3=pyhd3eb1b0_0
+pandas=1.3.4=py39h2e25243_1
+pandocfilters=1.4.3=py39haa95532_1
+parso=0.8.2=pyhd3eb1b0_0
+pickleshare=0.7.5=pyhd3eb1b0_1003
+pillow=8.4.0=py39h916092e_0
+pip=21.2.4=py39haa95532_0
+pipreqs=0.4.11=pypi_0
+prometheus_client=0.12.0=pyhd3eb1b0_0
+prompt-toolkit=3.0.20=pyhd3eb1b0_0
+prophet=1.0.1=py39hcbf5309_5
+pycodestyle=2.8.0=pyhd3eb1b0_0
+pycparser=2.21=pyhd3eb1b0_0
+pygments=2.10.0=pyhd3eb1b0_0
+pymeeus=0.5.11=pypi_0
+pyparsing=3.0.4=pyhd3eb1b0_0
+pyqt=5.12.3=py39hcbf5309_8
+pyqt-impl=5.12.3=py39h415ef7b_8
+pyqt5-sip=4.19.18=py39h415ef7b_8
+pyqtchart=5.12=py39h415ef7b_8
+pyqtwebengine=5.12.1=py39h415ef7b_8
+pyrsistent=0.18.0=py39h196d8e1_0
+pystan=2.19.1.1=py39h0e69a74_3
+python=3.9.7=h6244533_1
+python-dateutil=2.8.2=pyhd3eb1b0_0
+python_abi=3.9=2_cp39
+pytz=2021.3=pyhd8ed1ab_0
+pywin32=228=py39hbaba5e8_1
+pywinpty=0.5.7=py39haa95532_0
+pyyaml=6.0=pypi_0
+pyzmq=22.2.1=py39hd77b12b_1
+qt=5.12.9=h5909a2a_4
+requests=2.26.0=pypi_0
+scipy=1.7.3=py39hc0c34ad_0
+send2trash=1.8.0=pyhd3eb1b0_1
+setuptools=58.0.4=py39haa95532_0
+setuptools-git=1.2=pypi_0
+setuptools-scm=6.3.2=pypi_0
+six=1.16.0=pyhd3eb1b0_0
+sqlite=3.36.0=h2bbff1b_0
+tbb=2021.4.0=h2d74725_1
+terminado=0.9.4=py39haa95532_0
+testpath=0.5.0=pyhd3eb1b0_0
+tk=8.6.11=h8ffe710_1
+toml=0.10.2=pyhd3eb1b0_0
+tomli=1.2.2=pypi_0
+torch=1.10.0=pypi_0
+torch-lr-finder=0.2.1=pypi_0
+tornado=6.1=py39h2bbff1b_0
+tqdm=4.62.3=pyhd8ed1ab_0
+traitlets=5.1.1=pyhd3eb1b0_0
+typing_extensions=3.10.0.2=pyha770c72_0
+tzdata=2021e=hda174b7_0
+ujson=4.3.0=pypi_0
+urllib3=1.26.7=pypi_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+wcwidth=0.2.5=pyhd3eb1b0_0
+webencodings=0.5.1=py39haa95532_1
+werkzeug=2.0.2=pyhd3eb1b0_0
+wheel=0.37.0=pyhd3eb1b0_1
+widgetsnbextension=3.5.2=pypi_0
+wincertstore=0.2=py39haa95532_2
+winpty=0.4.3=4
+wtforms=2.3.3=pyhd3eb1b0_0
+xarray=0.20.1=pyhd8ed1ab_0
+xz=5.2.5=h62dcd97_1
+yarg=0.1.9=pypi_0
+zipp=3.6.0=pyhd3eb1b0_0
+zlib=1.2.11=h8ffe710_1013
+zstd=1.5.0=h6255e5f_0
