--- a/requirements.txt
+++ b/requirements.txt
@@ -92,7 +92,7 @@ PyQtWebEngine==5.12.1
 pyrsistent==0.18.0
 pystan==2.19.1.1
 python-dateutil==2.8.2
-pytz==2021.3
+pytz
 pywin32==228
 pywinpty==0.5.7
 PyYAML==6.0
