--- a/requirements.txt
+++ b/requirements.txt
@@ -93,7 +93,7 @@ pyrsistent==0.18.0
 pystan==2.19.1.1
 python-dateutil==2.8.2
 pytz
-pywin32==228
+pywin32
 pywinpty==0.5.7
 PyYAML==6.0
 pyzmq==22.2.1
