--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ netCDF4==1.5.8
 neuralprophet==0.3.0
 notebook==6.4.6
 numba==0.54.1
-numpy==1.21.4
+numpy
 olefile==0.46
 packaging==21.3
 pandas==1.3.4
