--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,47 @@
 Flask==2.0.2
 Flask_WTF==0.15.1
-numpy==1.21.4
-pandas==1.3.4
 scikit_learn==1.0.1
 WTForms==2.3.3
+ephem==4.1.1
+gunicorn==20.1.0
+importlib-metadata==4.8.1
+install==1.3.4
+Jinja2==3.0.2
+joblib==1.1.0
+jupyter-client==7.0.6
+jupyter-core==4.9.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+jsonschema==3.2.0
+matplotlib==3.5.0
+matplotlib-inline==0.1.2
+notebook==6.4.6
+numpy
+pandas==1.3.4
+pickleshare==0.7.5
+pip==21.2.4
+prophet==1.0.1
+pyparsing==3.0.4
+PyQt5==5.12.3
+PyQt5_sip==12.9.0
+PyQtChart==5.12
+PyQtWebEngine==5.12.1
+pyrsistent==0.18.0
+pystan==2.19.1.1
+scipy==1.7.3
+setuptools==58.0.4
+setuptools-git==1.2
+setuptools-scm==6.3.2
+six==1.16.0
+ujson==4.3.0
+ujson==4.3.0
+urllib3==1.26.7
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.2
+wheel==0.37.0
+widgetsnbextension==3.5.2
+wincertstore==0.2
+xarray==0.20.1
+yarg==0.1.9
+zipp==3.6.0
